
----------------------------------

==================================
||      Version 3.6             ||
==================================

* Deleted first/standard password-file; it will now created with a stream redirection instead of coping the file
* Changed donation link
! Extended README.md
+ --help: Added 'You may will test the latest version first' to parameter '--latest-version'

==================================
||      Version 3.5.1           ||
==================================

! No code was changed! Be sure, that you've installed the package 'ca-certificates' for fetching the latest script version - for further details execute 'apt-cache show ca-certificates'

==================================
||      Version 3.5             ||
==================================

* Replaced Shebang '/bin/bash' with '/usr/bin/env bash' to make it more portable
* Fixed issue with DDoS-Protection of TeamSpeak - the script is now able to identify the latest version (replaced teamspeak.com with teamspeak.de)
* Changed download mirror from 'files.teamspeak-services.com' to 'dl.4players.de' for server files (reason: files.teamspeak-services.com does not exists anymore)
+ Added check, if a TeamSpeak server is installed anyway
*/! Changed default eMail address of 'displayed_user_name.txt', because I've received very much eMails from other servers, which are not owned by me (I've deleted all eMails)
+ Added '7. Debugging' part to 'INSTALL_USAGE_GUIDE.txt'
+ Added parameter '--latest-version' - if you are a hoster and want to test the latest version first, you are now able to say the script, that you specify the latest version (just write the version string in a file and tell the script, that you want to us it. Example: ./TS3UpdateScript.sh --check --delete-old-logs --inform-online-clients --latest-version /home/demoLab/latestStableVersion.txt)